# think-tank

./: .gitignore  ARTIFACTS_README.md  PRD.md  README.md  artifacts_readme.html  pyproject.toml
src/: agent_data.db  runner_email_writer.py  runner_think_tank.py
src/email_writer/: agent.py
src/think_tank/: __main__.py  agent.py  prompt.py
src/think_tank/sub_agents/synthesizer/: agent.py  prompt.py
src/think_tank/sub_agents/think_tank/: agent.py  prompt.py
src/util_agents/content_publisher/: agent.py  prompt.py  tools.py
